--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/rekcufniarb/mostfrequentlyrepeatedwords/issues"
   },
-  "homepage": "https://github.com/rekcufniarb/mostfrequentlyrepeatedwords#readme"
+  "homepage": "https://github.com/rekcufniarb/mostfrequentlyrepeatedwords#readme",
+  "dependencies": {
+    "sanitize-html": "^1.20.1",
+    "striptags": "3.1"
+  }
 }
