--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Example REST API written in Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/rekcufniarb/mostfrequentlyrepeatedwords#readme",
   "dependencies": {
+    "express": "^4.17.1",
+    "pug": "^2.0.4",
     "sanitize-html": "^1.20.1",
     "striptags": "3.1"
   }
