--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/rekcufniarb/mostfrequentlyrepeatedwords#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "natural": "^0.6.3",
     "pug": "^2.0.4",
     "sanitize-html": "^1.20.1",
     "striptags": "3.1"
