--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/rekcufniarb/mostfrequentlyrepeatedwords#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "html-pdf": "^2.2.0",
+    "md5": "^2.2.1",
     "natural": "^0.6.3",
     "pug": "^2.0.4",
     "sanitize-html": "^1.20.1",
