--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Example REST API written in Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests/index.js",
     "start": "node index.js"
   },
   "repository": {
