--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "pug": "^2.0.4",
     "sanitize-html": "^1.20.1",
     "striptags": "3.1"
+  },
+  "devDependencies": {
+    "mocha": "^6.2.0"
   }
 }
